<resources>
    <string name="app_name">SdkCreation</string>
    <string name="enter_remote_id">Enter Remote Id</string>
    <string name="start_call">Start Call</string>
    <string name="meeting_id">Meeting Id</string>
    <string name="connect">Connect</string>
    <string name="end_call">End Call</string>
    <string name="answer">Answer</string>
    <string name="decline">Decline</string>
    <string name="calling">Calling...</string>
    <string name="receiving">Receiving...</string>
</resources>