<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/vcView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/LocalSurfaceView"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_above="@+id/bottomView"
            android:layout_alignParentEnd="true"
            android:layout_gravity="top|end"
            android:layout_margin="16dp" />

        <org.webrtc.SurfaceViewRenderer
            android:id="@+id/RemoteSurfaceView"
            android:layout_width="wrap_content"
            android:layout_height="367dp"
            android:layout_gravity="center" />


        <LinearLayout
            android:id="@+id/bottomView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/muteAudio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="Mute Audio" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/muteVideo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="Mute Video" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/switchCamera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="Switch Camera" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/endCall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="End" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ansCall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="ansCall"
                android:visibility="gone" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/callerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:hint="@string/calling"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/endCallBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/end_call" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/receiverView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:hint="@string/receiving"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/answerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/declineBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decline" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>